--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Zihan Li"
   avatar           : "profile_2.png"
-  bio              : "I am studing for master degree in UIUC, and my research focuses on medical image analysis."
+  bio              : "I am studing for my master degree in UIUC, and my research focuses on medical image analysis."
   location         : "Champaign, IL"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
