--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Champaign, IL"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "http://yourfullgooglescholarurl.com"
+  googlescholar    : "https://scholar.google.com/citations?hl=en&user=KoY6bW8AAAAJ"
   email            : "zl111@illinois.edu"
   researchgate     : "https://www.researchgate.net/profile/Zihan-Li-26"
   uri              :
