--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Zihan Li (李子晗)"
-  avatar           : "profile.jpg"
+  avatar           : "profile_3.png"
   bio              : "I am studying for my master degree in UIUC, and my research focuses on medical image analysis."
   location         : "Champaign, IL"
   employer         :
