--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Zihan Li (李子晗)"
+  name             : "Zihan Li"
   avatar           : "profile_3.png"
   bio              : "I am studying for my master degree in UIUC, and my research focuses on medical image analysis."
   location         : "Champaign, IL"
