--- a/_config.yml
+++ b/_config.yml
@@ -83,11 +83,11 @@ author:
   name             : "Zihan Li"
   avatar           : "profile_3.png"
   bio              : "I am studying for my master degree in UIUC, and my research focuses on medical image analysis."
-  location         : "Champaign, IL"
+  location         : "Seattle, WA"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=KoY6bW8AAAAJ"
-  email            : "zl111@illinois.edu"
+  email            : "zhanli@uw.edu"
   researchgate     : "https://www.researchgate.net/profile/Zihan-Li-26"
   uri              :
   bitbucket        :
