--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 author:
   name             : "Zihan Li"
   avatar           : "profile_3.png"
-  bio              : "I am studying for my master degree in UIUC, and my research focuses on medical image analysis."
+  bio              : "I am studying for my Ph.D. degree in UW, and my research focuses on medical image analysis."
   location         : "Seattle, WA"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
