--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "zihan-li-2159bb24b"
+  linkedin         : #"zihan-li-2159bb24b"
   orcid            : "https://orcid.org/0009-0004-3839-0611"
   pinterest        :
   soundcloud       :
