--- a/_config.yml
+++ b/_config.yml
@@ -80,13 +80,13 @@ analytics:
 author:
   name             : "Jingqi Qi"
   avatar           : "profile_3.png"
-  bio              : "I am studying for my Ph.D. degree in UW, and my research focuses on medical image analysis."
+  bio              : "I am a BioE phd in univeristy of washington interested in stem cell tissue regeneration, synthetic biology"
   location         : "Seattle, WA"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "https://scholar.google.com/citations?hl=en&user=KoY6bW8AAAAJ"
-  email            : "zhanli@uw.edu"
-  researchgate     : "https://www.researchgate.net/profile/Zihan-Li-26"
+  googlescholar    : "https://scholar.google.com/citations?hl=en&user=FvonkL8AAAAJ"
+  email            : "jingqq@uw.edu"
+  researchgate     : # ""
   uri              :
   bitbucket        :
   codepen          :
@@ -94,14 +94,14 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "HUANGLIZI"
+  github           : "Jingqiqi777"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : #"zihan-li-2159bb24b"
-  orcid            : "https://orcid.org/0009-0004-3839-0611"
+  linkedin         : #"jingqi-qi-023201218"
+  orcid            : #""
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
