--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 # Site Author
 author:
   name             : "Jingqi Qi"
-  avatar           : "profile_3.png"
+  avatar           : "WechatIMG1434.jpeg"
   bio              : "I am a BioE phd in univeristy of washington interested in stem cell tissue regeneration, synthetic biology"
   location         : "Seattle, WA"
   employer         :
